--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       // Load the model.
       cocoSsd.load().then((model) => {
         // detect objects in the image.
-        // console.log(model);
+        console.log("model ", model);
         window["model"] = model;
       });
     </script>
